syntax = "proto3";

package user;

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponses);
  rpc GetUserEmail(GetUserEmailReq) returns (GetUserEmailResponse);
  rpc findById(GetUserIdReq) returns (GetIdResponse);
}

message GetUserRequest {
  string userId = 1;
}

message GetUserEmailReq {
  string email = 1;
}

message GetUserIdReq {
  string id = 1;
}

message GetUserResponse {
  string _id = 1;
  string username = 2;
  string email = 3;
  string firstname = 4;
  string password = 5;
}

message GetUserResponses {
  repeated GetUserResponse data = 1;
}

message GetUserEmailResponse {
  GetUserResponse user = 1; 
}
message GetUserIdResponse {
 string _id = 1;
  string username = 2;
  string email = 3;
  string firstname = 4;
}

message GetIdResponse {
  GetUserIdResponse user = 1; 
}
